[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HiddenRequest"
version = "0.0.1"
authors = [
  {"name"="groseries"}
]
description = "Package that builds on both requests and Torrequests to include a VPN and randomized headers"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/groseries/HiddenRequest"
"Bug Tracker" = "https://github.com/groseries/HiddenRequest/issues"